Tentando aplicar Kafka

--- a/financas/src/main/resources/application.properties
+++ b/financas/src/main/resources/application.properties
@@ -4,3 +4,23 @@ spring.datasource.url=jdbc:mysql://localhost/financas?createDatabaseIfNotExist=t
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+
+# Producer properties
+spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+#spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.group-id=minhas-financas
+topic.name.producer=financas
+spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+
+# Consumer properties
+spring.kafka.consumer.bootstrap-servers=127.0.0.1:9092
+spring.kafka.consumer.group-id=minhas-financas
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+topic.name.consumer=financas
+
+# Common Kafka Properties
+auto.create.topics.enable=true
+
