--- a/financas/src/main/resources/application.properties
+++ b/financas/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost/financas?createDatabaseIfNotExist=t
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
 
 # Producer properties
 spring.kafka.producer.bootstrap-servers=127.0.0.1:9092
